Fixed dropdownmarker size too big on OSX r=toddw
(integrated from komodo (trunk) change 76672 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11606 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/icons.less
@@ -852,8 +852,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
 
@@ -874,8 +878,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
 
@@ -891,8 +899,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
 
@@ -913,8 +925,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }    
 }
 
@@ -936,8 +952,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }    
     
 }
@@ -980,8 +1000,12 @@ treechildren::-moz-tree-image(remotefile)
     toolbarbutton image
     {
         filter: @panel-toolbar-icon-filter;
-        width: 14px;
-        height: 14px;
+        
+        &.toolbarbutton-icon
+        {
+            width: 14px;
+            height: 14px;
+        }
     }    
     
 }
@@ -997,8 +1021,12 @@ treechildren::-moz-tree-image(remotefile)
         image
         {
             filter: @panel-toolbar-icon-filter;
-            width: 14px;
-            height: 14px;
+        
+            &.toolbarbutton-icon
+            {
+                width: 14px;
+                height: 14px;
+            }
         }
     }
     
